--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Patient/Add.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Patient/Add.cshtml
@@ -44,6 +44,6 @@
 	<br/>
 	<div class="form-group">
 		<button type="submit" value="Ajouter" class="btn btn-secondary" style="background-color :green">Ajouter</button>
-		<button type="reset" onclick="location.href='@Url.Action("Index","Diagnostique")';" class="btn btn-secondary" style="background-color :red">Annuler</button>
+		<button type="reset" onclick="location.href='@Url.Action("Index","Diagnostic")';" class="btn btn-secondary" style="background-color :red">Annuler</button>
 	</div>
 </form>
