--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
 								<a class="nav-link" asp-controller="Account" asp-action="Informations">Informations</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" asp-controller="Diagnostique" asp-action="Index">Diagnostique</a>
+								<a class="nav-link" asp-controller="Diagnostic" asp-action="Index">Diagnostique</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" asp-controller="ConfigurationIa" asp-action="Index">Configuration IA</a>
